# Sekurer

./: .gitignore  CODEX_STATUS.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  start_sekurer.bat
.github/workflows/: ios-build.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260515_000001_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  automation.py  calendar_items.py  calls.py  tasks.py  worker.py
backend/app/core/: config.py  email.py  logging.py  security.py  startup.py  storage.py
backend/app/db/: models.py
backend/app/schemas/: auth.py  calendar.py  calls.py  tasks.py
backend/app/services/: ai_service.py  auth_service.py  call_service.py  storage_service.py
backend/app/tests/: test_worker_helpers.py
backend/app/workers/: celery_app.py  tasks.py
mobile/: FLUTTER_SETUP.md  README.md  pubspec.yaml
mobile/android/: key.properties.example
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: api_client.dart  api_config.dart  app_state.dart  app_theme.dart  auth_storage.dart
mobile/lib/models/: auth_models.dart  calendar_item_models.dart  call_models.dart  task_models.dart
mobile/lib/services/: auth_api.dart  calendar_items_api.dart  calls_api.dart  (+1 more)
mobile/test/: widget_test.dart
release/: ios-build-instructions.md  v1.0.0-notes.md
scripts/: automate_sekurer.ps1  bootstrap_flutter_mobile.sh  smoke_test.sh
(+13 files in other folders)
