[project]
name = "ai-call-assistant-backend"
version = "0.1.0"
description = "Backend for AI Call Assistant MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "openai>=1.0.0",
  "boto3>=1.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
